--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    {% block "content" %}{% endblock %}
+    {% block "content" %}
+    
+    <h1>hi</h1>
+    {% endblock %}
   </body>
 </html>
