--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    {% include "faqs/flash.html" %}
     {% block "content" %}{% endblock %}
   </body>
 </html>
