refactor: moved flash.html to templates/shared

--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    {% include "faqs/flash.html" %}
+    {% include "shared/flash.html" %}
     {% block "content" %}{% endblock %}
   </body>
 </html>
