refactor: removed projects column pending Projects FK

--- a/faqs/templates/faqs/index.html
+++ b/faqs/templates/faqs/index.html
@@ -6,7 +6,7 @@
 <ul>
 {% for faq in faqs %}
     <li>
-        <a href="{% url 'faqs:show' faq.id %}">{{ faq.project }}</a>
+        <a href="{% url 'faqs:show' faq.id %}">{{ faq.question }}</a>
     </li>
 {% endfor %}    
 </ul>
