style: add placeholder to input field for better UI feedback

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -14,11 +14,11 @@
   </div>
   <div>
     <label>Password</label>
-    <input type="password" name="password1" />
+    <input type="password" name="password1" placeholder="最少需要8個字元" />
   </div>
   <div>
-    <label>Password 確認</label>
-    <input type="password" name="password2" />
+    <label>再次確認Password</label>
+    <input type="password" name="password2" placeholder="最少需要8個字元"/>
   </div>
   <div>
     <button>註冊</button>
