--- a/faqs/templates/faqs/index.html
+++ b/faqs/templates/faqs/index.html
@@ -7,6 +7,7 @@
 {% for faq in faqs %}
     <li>
         <a href="{% url 'faqs:show' faq.id %}">{{ faq.question }}</a>
+        <span>{{ faq.create_at|date:"Y-m-d H:i:s"}}</span>
     </li>
 {% endfor %}    
 </ul>
