--- a/pledges/templates/pledges/index.html
+++ b/pledges/templates/pledges/index.html
@@ -1,12 +1,14 @@
 {%extends "shared/layout.html"%}{%block "content"%}
 <h1>募款紀錄首頁</h1>
-<a href="{%url 'pledges:new'%}">新增募款項目</a>
-
+<a href="{%url 'pledges:new'%}"></a>
 <ul>
   {%for pledge in pledges%}
-  <li>
-    <a href="{%url 'pledges:show' id=pledge.id%}">{{pledge.pledges_amount}}</a>
-  </li>
+
+  <li>募款紀錄編號：{{ pledge.id }}</li>
+  <li>募款金額：{{ pledge.pledges_amount }}</li>
+  <li>募款日期：{{ pledge.pledges_date }}</li>
+  <li>付款狀態{{ pledge.payment_status }}</li>
+  <li></li>
   {%endfor%}
 </ul>
 
