--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -1,8 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="{% static 'scripts/app.js' %}" type="module"></script>
+    <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
     <title>Document</title>
   </head>
   <body>
