--- a/projects/templates/projects/show.html
+++ b/projects/templates/projects/show.html
@@ -11,9 +11,6 @@
 
 
 <a href="{% url "projects:edit" project.id %}">編輯</a>
-<form action="{% url "projects:delete" project.id %}" method="POST">
-    {% csrf_token %}
-    <button>刪除</button>
-</form>
+<a href="{% url "projects:delete" project.id %}">刪除</a>
 <a href="{% url "projects:index" %}">回主頁</a>
 {% endblock %}
