refactor:users/views.edit

--- a/users/templates/users/edit.html
+++ b/users/templates/users/edit.html
@@ -7,7 +7,7 @@
     value="{{ user.name }}"
   /><br />
   email:<br /><input type="email" name="email" value="{{ user.email }}" /><br />
-  phone:<br /><input type="text" name="phone" value="{{ user.phone }}" /><br />
+  phone:<br /><input type="tel" name="phone" value="{{ user.phone }}" /><br />
   birthday:<br /><input
     type="date"
     name="birthday"
@@ -20,7 +20,7 @@
   /><br />
   website:<br /><input
     type="url"
-    name="personal_website"
+    name="website"
     value="{{ user.website}}"
   /><br />
   bio:<br /><textarea name="bio">{{ user.bio }}</textarea><br />
