--- a/projects/templates/projects/show.html
+++ b/projects/templates/projects/show.html
@@ -13,4 +13,8 @@
 <a href="{% url "projects:edit" project.id %}">編輯</a>
 <a href="{% url "projects:delete" project.id %}">刪除</a>
 <a href="{% url "projects:index" %}">回主頁</a>
+<form method="POST" action="{% url "projects:collect" project.id %}">
+    {% csrf_token %}
+    <button>收藏</button>
+</form>
 {% endblock %}
