--- a/homepages/templates/homepages/homepages.html
+++ b/homepages/templates/homepages/homepages.html
@@ -1,20 +1,6 @@
-{% extends "shared/layout.html" %}{% load socialaccount %} {% block "content" %}
-{% if messages %}
-<ul>
-  {% for message in messages %}
-  <li class="alert {{ message.tags }}">{{ message }}</li>
-  {% endfor %}
-</ul>
-{% endif %} {% if user.is_authenticated %}
-<li><a>{{ user.username }}</a></li>
-<form method="POST" action="{% url 'accounts:logout' %}">
-  {% csrf_token %}
-  <button>登出</button>
-</form>
-{% else %}
-<li><a href="{% url 'accounts:login' %}">登入</a></li>
-<li><a href="{% url 'accounts:register' %}">註冊</a></li>
+{% extends "shared/layout.html" %}{% load socialaccount %} 
+{% block "content" %}
 <li>
   <a href="{% provider_login_url 'google' method='oauth2' %}">Google登入</a>
 </li>
-{% endif %} {% endblock %}
+{% endblock %}
