--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -9,7 +9,8 @@
     <title>Document</title>
   </head>
   <body>
-    {% include "shared/flash.html" %}
+    {% include "shared/flash.html" %} 
+    {% include "shared/navbar.html" %} 
     {% block "content" %}{% endblock %}
   </body>
 </html>
