--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,27 +1,57 @@
-{% extends "shared/layout.html" %}
-
-{% block "content" %}
-<h1>註冊</h1>
-<form method="POST">
-  {% csrf_token %}
-  <div>
-    <label>Username</label>
-    <input type="text" name="username" />
+{% extends "shared/layout.html" %} {% block "content" %}
+<div class="flex items-center justify-center min-h-screen bg-gray-100">
+  <div class="max-w-md p-8 bg-white rounded-lg shadow-md">
+    <h1 class="text-center text-2xl font-bold mb-6">註冊</h1>
+    <form method="POST">
+      {% csrf_token %}
+      <div class="mb-4">
+        <label class="input input-bordered flex items-center gap-2">
+          Username
+          <input
+            class="w-full"
+            type="text"
+            placeholder="請輸入電子郵件信箱"
+            name="username"
+          />
+        </label>
+      </div>
+      <div class="mb-4">
+        <label class="input input-bordered flex items-center gap-2">
+          Email
+          <input
+            class="w-full"
+            type="text"
+            placeholder="請輸入電子郵件信箱"
+            name="email"
+          />
+        </label>
+      </div>
+      <div class="mb-4">
+        <label class="input input-bordered flex items-center gap-2">
+          Password
+          <input
+            class="w-full"
+            type="password"
+            placeholder="最少需要8個字元"
+            name="password1"
+          />
+        </label>
+      </div>
+      <div class="mb-4">
+        <label class="input input-bordered flex items-center gap-2">
+          再次確認Password
+          <input
+            class="w-full"
+            type="password"
+            placeholder="最少需要8個字元"
+            name="password2"
+          />
+        </label>
+      </div>
+      <div class="flex justify-center">
+        <button class="btn btn-warning w-full">註冊</button>
+      </div>
+    </form>
   </div>
-  <div>
-    <label>Email</label>
-    <input type="email" name="email" />
-  </div>
-  <div>
-    <label>Password</label>
-    <input type="password" name="password1" placeholder="最少需要8個字元" />
-  </div>
-  <div>
-    <label>再次確認Password</label>
-    <input type="password" name="password2" placeholder="最少需要8個字元"/>
-  </div>
-  <div>
-    <button>註冊</button>
-  </div>
-</form>
+</div>
 {% endblock %}
