--- a/comments_replies/templates/comments_replies/show.html
+++ b/comments_replies/templates/comments_replies/show.html
@@ -3,8 +3,8 @@
 <p>{{comments_reply.content}}</p><span>{{comments_reply.create_at}}</span>
 
 <br>
-<a href="{%url 'comments_replies:edit' id=comments_reply.id%}">編輯</a>
-<a href="{%url 'comments_replies:delete' id=comments_reply.id%}">刪除</a>
+<a href="{%url 'comments_replies:edit' comments_reply.id%}">編輯</a>
+<a href="{%url 'comments_replies:delete' comments_reply.id%}">刪除</a>
 <a href="{%url 'comments_replies:index' %}">回主頁</a>
 
 
