--- a/projects/templates/projects/show.html
+++ b/projects/templates/projects/show.html
@@ -23,5 +23,5 @@
       {% endif %}
     </button>
 </form>
-<a href="{% url "accounts:projects" account.id %}">回主頁</a>
+<a href="{% url "comments:index"  %}">增加評論</a>
 {% endblock %}
