feat: update FK relationship between update_records and project

--- a/projects/templates/projects/show.html
+++ b/projects/templates/projects/show.html
@@ -23,4 +23,5 @@
 <a href="{% url "accounts:projects" account.id %}">回主頁</a>
 <a href="{% url "projects:comment_index" project.id%}">comment</a>
 <a href="{% url "projects:faq_index" project.id %}">查看FAQ</a>
+<a href="{% url "projects:update_records_index" project.id %}">更新狀態</a>
 {% endblock %}
