refactor: resolve projects templates conflicts

--- a/templates/shared/flash.html
+++ b/templates/shared/flash.html
@@ -20,6 +20,12 @@
         &times;
       </button>
     </li>
+      <li         
+        x-data="{ show: true }" 
+        x-init="setTimeout(() => show = false, 500)" 
+        x-show="show"
+        x-transition
+        class="bg-gray-200 p-2 rounded shadow">{{ message }}</li>
     {% endfor %}
   </ul>
 </div>
