--- a/comments_replies/templates/comments_replies/index.html
+++ b/comments_replies/templates/comments_replies/index.html
@@ -1,6 +1,6 @@
 {%extends "shared/layout.html"%}{% block "content" %}
 <h1>回覆留言頁面</h1>
-<a href="{%url 'comments_replies:new'%}">新增回覆留言</a>
+<a href="{%url 'comments:comments_replies_new' comment.id %}">新增回覆留言</a>
 
 <ul>
   {%for comments_reply in comments_replies%}
