--- a/projects/templates/projects/show.html
+++ b/projects/templates/projects/show.html
@@ -12,7 +12,6 @@
 
 <a href="{% url "projects:edit" project.id %}">編輯</a>
 <a href="{% url "projects:delete" project.id %}">刪除</a>
-<a href="{% url "accounts:projects" account.id %}">回主頁</a>
 <form method="POST" action="{% url "projects:collect" project.id %}">
     {% csrf_token %}
     <button>
@@ -24,4 +23,6 @@
     </button>
 </form>
 <a href="{% url "accounts:projects" account.id %}">回主頁</a>
+<a href="{% url "projects:comment_index" project.id%}">comment</a>
+
 {% endblock %}
