--- a/comments/templates/comments/new.html
+++ b/comments/templates/comments/new.html
@@ -1,7 +1,7 @@
 {% extends "shared/layout.html"%} {% block "content" %}
 <h1>NewProjects</h1>
 
-<form action="{% url "comments:index" %}" method="POST" >
+<form action="{% url "projects:comment_index" project.id %}" method="POST" >
   {% csrf_token %}
   content:<br />
   <input type="text" name="content" /><br />
