refactor: resolve comments urls.py conflicts

--- a/comments/templates/comments/show.html
+++ b/comments/templates/comments/show.html
@@ -6,6 +6,6 @@
 
 <a href="{% url "comments:edit" comment.id %}"><button>編輯</button></a> 
 <a href="{% url "comments:delete" comment.id %}"><button>刪除</button></a> 
-<a href="{%url "comments_replies:index" %}">新增回覆留言</a>
+<a href="{%url "comments:comments_replies_index" comment.id %}">新增回覆留言</a>
 <a href="{% url "projects:comment_index" project.id %}">回主頁</a>
 {% endblock %}
