--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -2,5 +2,6 @@
 <h1>Account</h1>
 <p>{{account.username}}</p>
 <a href="{% url "accounts:projects" account.id%}">募資專案管理</a> <br>
+<a href="{% url "accounts:profiles_index" account.id%}">前往個人資料</a>
 <a href="{% url "homepages:homepages" %}">回首頁</a>
 {% endblock %}
