--- a/update_records/templates/update_records/new.html
+++ b/update_records/templates/update_records/new.html
@@ -1,7 +1,7 @@
 {% extends "shared/layout.html"%} {% block "content" %}
 <h1>New update_records</h1>
 
-<form action="{% url "update_records:index" id %}" method="POST" >
+<form action="{% url "projects:update_records_index" id %}" method="POST" >
   {% csrf_token %}
   title:<br />
   <input type="text" name="title" /><br />
