--- a/projects/templates/projects/show.html
+++ b/projects/templates/projects/show.html
@@ -20,6 +20,17 @@
       {% endif %}
     </button>
 </form>
+
+<form action="{%url "projects:like" project.id%}" method="post">
+  {% csrf_token %}
+  <button>
+    {%if favorited%}
+    <img src="/static/svg/like-on.svg" alt="">
+    {%else%}
+    <img src="/static/svg/like-off.svg" alt="">
+    {%endif%}
+  </button>
+</form>
 <a href="{% url "accounts:projects" account.id %}">回主頁</a>
 <a href="{% url "projects:comment_index" project.id%}">comment</a>
 <a href="{% url "projects:faq_index" project.id %}">查看FAQ</a>
